fix spacing

--- a/default.css
+++ b/default.css
@@ -28,7 +28,7 @@ body {
 }
 
 #intro .col-xs-7 {
-	padding: 4% 0;
+	padding: 2% 0;
 	color: white;
 }
 
